# solana_http_server

./: Cargo.toml
src/: main.rs  response.rs
src/handlers/: create_token.rs  create_token_mint.rs  keypair.rs  mod.rs  send_sol.rs  send_token.rs  sign_message.rs  verify_message.rs
src/routes/: mod.rs
src/utils/: crypto.rs
