[package]
name = "solana_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
hyper = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bs58 = "0.5"
ed25519-dalek = "1.0"
thiserror = "1.0"
rand = "0.8"
solana-sdk = "2.3.1"
sha2 = "0.10"
